Bug 331434 - notification spam when apt-get update is in progress
Summary: notification spam when apt-get update is in progress
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: notifier (other bugs)
Version First Reported In: 2.1.70
Platform: unspecified Linux
: VHI normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-23 16:33 UTC by Harald Sitter
Modified: 2014-04-10 16:46 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Proposed patch (5.16 KB, patch)
2014-03-25 16:45 UTC, Lukas Appelhans
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2014-02-23 16:33:05 UTC
when apt-get update is in progress the notifier keeps detecting changes and spams notifications like mad.

Reproducible: Always
Comment 1 Lukas Appelhans 2014-03-25 16:45:41 UTC
Created attachment 85737 [details]
Proposed patch
Comment 2 Lukas Appelhans 2014-03-25 16:45:57 UTC
Can you test the attached patch?
Comment 3 Harald Sitter 2014-03-26 09:40:58 UTC
Confirmed to fix the issue.
Comment 4 Aleix Pol 2014-04-01 15:52:48 UTC
Lukas, can we close the bug report?
Comment 5 Lukas Appelhans 2014-04-02 23:21:56 UTC
Git commit 102c841288a1547d1abe153c6f9db8a7d024b84b by Lukas Appelhans.
Committed on 02/04/2014 at 23:21.
Pushed by lappelhans into branch 'master'.

Don't post another notification if the data didn't change!

M  +20   -5    libmuon/resources/AbstractKDEDModule.cpp
M  +5    -4    libmuon/resources/AbstractKDEDModule.h
M  +1    -0    libmuon/resources/AbstractResource.h

http://commits.kde.org/muon/102c841288a1547d1abe153c6f9db8a7d024b84b
Comment 6 Lukas Appelhans 2014-04-02 23:23:04 UTC
Now it is! :) Sorry that it took so long to commit this! :)
Comment 7 Aleix Pol 2014-04-10 15:06:06 UTC
Git commit a882eeb2574af5fe7931166787911cb09975d12c by Aleix Pol, on behalf of Lukas Appelhans.
Committed on 02/04/2014 at 23:21.
Pushed by apol into branch '2.2'.

Don't post another notification if the data didn't change!

Conflicts:
	libmuon/resources/AbstractKDEDModule.cpp

M  +22   -5    libmuon/resources/AbstractKDEDModule.cpp
M  +5    -4    libmuon/resources/AbstractKDEDModule.h
M  +1    -0    libmuon/resources/AbstractResource.h

http://commits.kde.org/muon/a882eeb2574af5fe7931166787911cb09975d12c
Comment 8 Harald Sitter 2014-04-10 16:46:30 UTC
*** Bug 333291 has been marked as a duplicate of this bug. ***