Don't post another notification if the data didn't change!

BUG:331434

Conflicts:
	libmuon/resources/AbstractKDEDModule.cpp